--- a/src/config.yaml
+++ b/src/config.yaml
@@ -1,3 +1,3 @@
 settings:
-  language: German
-  difficulty_level: intermediate
+  language: German # German, Spanish, Afrikaans etc.
+  difficulty_level: intermediate # beginner, intermediate, advanced etc.
